# ros-basic

./: README.md
src/.c9/: state.settings
src/action_server_move_square/: CMakeLists.txt  package.xml
src/action_server_move_square/launch/: move_square_action_server.launch
src/action_server_move_square/src/: move_square_action_server.py
src/ardrone_action_client/: CMakeLists.txt  package.xml
src/ardrone_action_client/launch/: move_drone.launch
src/ardrone_action_client/src/: move_drone.py
src/common_pkg/: CMakeLists.txt  package.xml
src/exercise22/: CMakeLists.txt  package.xml
src/exercise22/launch/: exercise22_launch_file.launch  exercise23_publish_age.launch
src/exercise22/src/: publish_age.py  simple_topic_subscriber.py
src/logger_example/: CMakeLists.txt  package.xml
src/logger_example/launch/: logger_example.launch
src/logger_example/src/: logger_example.py
src/my_custom_action_msg_pkg/: CMakeLists.txt  package.xml
src/my_custom_action_msg_pkg/launch/: custom_action_msg.launch
src/my_custom_action_msg_pkg/src/: custom_action_msg.py
src/my_custom_srv_msg_pkg/: CMakeLists.txt  package.xml
src/my_sphero_actions/: CMakeLists.txt  package.xml
src/my_sphero_main/: CMakeLists.txt  package.xml
src/my_sphero_services/: CMakeLists.txt  package.xml
src/my_sphero_topics/: CMakeLists.txt  package.xml
src/simple_topic_publisher_package/: CMakeLists.txt  package.xml
src/testing/: CMakeLists.txt  package.xml
src/unit2_mini_project/: CMakeLists.txt  package.xml
src/unit_3_services/: CMakeLists.txt  package.xml
(+62 files in other folders)
